fix: The toolbarcontent z-index was wonky. Fixed

--- a/web/static/css/shmoocon.css
+++ b/web/static/css/shmoocon.css
@@ -123,6 +123,10 @@ h1, h2, h3 {
     margin-bottom: 20px;
 }
 
+#toolbarContent {
+    z-index: 1049;
+}
+
 .tooltip-container {
     position: relative;
     display: inline-block;
